output.log
nohup: ignoring input
  File "train_stgcn_server.py", line 1051
    print('✓ Log file closed and saved.')1~t  ^T To
                                         ^
SyntaxError: invalid syntax
